<resources>
    <string name="app_name">Nav_Drawers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="action_settings">Settings</string>
    <string name="getting_started">Getting Started</string>
    <string name="nav_deshboard">Dashboard</string>
    <string name="bills">Bills</string>
    <string name="balancesheet">Balance Sheet</string>
    <string name="emergency">Emergency</string>
    <string name="members">Members</string>
    <string name="building">My Building</string>
    <string name="vehicle">Vehicles</string>
    <string name="permission">Permission</string>
    <string name="wings">Wings</string>
    <string name="complains">Complains</string>
    <string name="rules">Rules</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="change_password">Change Password</string>
    <string name="contactus">Contact us</string>
    <string name="logout">Logout</string>
    <string name="buil_detail">Building details</string>
    <string name="statistics">Statistics</string>
</resources>
